--- a/style.css
+++ b/style.css
@@ -64,3 +64,36 @@ body {
 .card.flip {
     transform: rotateY(180deg);
 }
+
+#contagem {
+    display: flex;
+    padding: 20px;
+}
+
+#button{
+    display: none;
+    margin-top: 200px;
+    margin-right: 200px;
+    box-sizing: border-box;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  background-color: transparent;
+  border: 2px solid white;
+  border-radius: 0.6em;
+  color: whitesmoke;
+  cursor: pointer;
+  -webkit-align-self: center;
+      -ms-flex-item-align: center;
+          align-self: center;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1;
+  margin: 20px;
+  padding: 1.2em 2.8em;
+  text-decoration: none;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+}
